--- a/Chart_test/app/src/main/res/menu/drawer.xml
+++ b/Chart_test/app/src/main/res/menu/drawer.xml
@@ -11,10 +11,10 @@
             android:id="@+id/navigation_item_hitori"
             android:icon="@drawable/hitori"
             android:title="@string/navigation_hirori" />
-        <item
-            android:id="@+id/navigation_item_data"
-            android:icon="@drawable/data"
-            android:title="@string/navigation_data" />
+        <!--<item-->
+            <!--android:id="@+id/navigation_item_data"-->
+            <!--android:icon="@drawable/data"-->
+            <!--android:title="@string/navigation_data" />-->
         <item
             android:id="@+id/navigation_item_tomo"
             android:icon="@drawable/tomo"
